// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableArea[Base] should render correctly  1`] = `
<div
  class="c-e05fja soui-editableArea-wrapper"
  style="width: 300px;"
>
  <div
    class="c-e3dynm soui-editableArea-place c-40m43w soui-editableArea-wrapper-padding-box ci3tt95 soui-editableArea-wrapper-inner-title-top c-bc9h7d soui-editableArea-wrapper-inner-title-bottom"
    tabindex="0"
  >
    <div
      class="c-onk3k0 soui-editableArea-content"
    >
      <span
        class="c-m5gfpi soui-editableArea-placeholder"
      >
        input something
      </span>
    </div>
  </div>
</div>
`;

exports[`EditableArea[Base] should render correctly  2`] = `
<div
  class="c-e05fja soui-editableArea-wrapper"
  style="width: 300px;"
>
  <div
    class="c-e3dynm soui-editableArea-place c-40m43w soui-editableArea-wrapper-padding-box ci3tt95 soui-editableArea-wrapper-inner-title-top c-bc9h7d soui-editableArea-wrapper-inner-title-bottom"
    tabindex="0"
  >
    <div
      class="c-onk3k0 soui-editableArea-content"
    >
      i am a long text, i am a long text, i am a long text
    </div>
  </div>
</div>
`;

exports[`EditableArea[Base] should render correctly  3`] = `
<div
  id="popup-target"
  style="height: 100px; overflow-y: auto; position: relative; padding: 10px; margin-left: -10px;"
>
  <div
    style="height: 50px;"
  />
  <div
    class="c-e05fja soui-editableArea-wrapper"
    style="width: 300px;"
  >
    <div
      class="c-e3dynm soui-editableArea-place c-40m43w soui-editableArea-wrapper-padding-box ci3tt95 soui-editableArea-wrapper-inner-title-top c-bc9h7d soui-editableArea-wrapper-inner-title-bottom"
      tabindex="0"
    >
      <div
        class="c-onk3k0 soui-editableArea-content"
      >
        <span
          class="c-m5gfpi soui-editableArea-placeholder"
        >
          scroll in container
        </span>
      </div>
    </div>
  </div>
  <div
    style="height: 140px;"
  />
</div>
`;

exports[`EditableArea[Base] should render correctly  4`] = `
<div>
  <div
    class="c-e05fja soui-editableArea-wrapper"
    style="width: 300px;"
  >
    <div
      class="c-e3dynm soui-editableArea-place c-40m43w soui-editableArea-wrapper-padding-box ci3tt95 soui-editableArea-wrapper-inner-title-top c-bc9h7d soui-editableArea-wrapper-inner-title-bottom"
      tabindex="0"
    >
      <div
        class="c-onk3k0 soui-editableArea-content"
      >
        <span
          class="c-m5gfpi soui-editableArea-placeholder"
        >
          input something
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditableArea[Base] should render correctly  5`] = `
<div>
  <div
    class="c-e05fja soui-editableArea-wrapper"
    style="width: 300px;"
  >
    <div
      class="c-e3dynm soui-editableArea-place c-40m43w soui-editableArea-wrapper-padding-box ci3tt95 soui-editableArea-wrapper-inner-title-top c-bc9h7d soui-editableArea-wrapper-inner-title-bottom"
      tabindex="0"
    >
      <div
        class="c-onk3k0 soui-editableArea-content"
      >
        <div>
          Guessing what I inputed ?
        </div>
      </div>
    </div>
  </div>
</div>
`;
